--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -49,7 +49,7 @@ SRC_routines_flux = \
  delevec.f90 genvmatk.f90 genvmat.f90 genwfsv.f90 \
  findsymsite.f90 geomplot.f90 hartfock.f90 genkinmat.f90 energykncr.f90 \
  zfint.f90 rfpack.f90 rfint.f90 writefsm.f90 genbmatk.f90 writenn.f90 \
- zrhoplot.f90 zplot2d.f90 zfarray.f90 invzge.f90 dftsc.f90
+ zrhoplot.f90 zplot2d.f90 zfarray.f90 invzge.f90 dftsc.f90 zsh2rsh.f90
 
 SRC_phonon = \
  phonon.f90 dyntask.f90 phcell.f90 phdisp.f90 readdyn.f90 dynqtor.f90 \
