--- a/trunk/0.9.224/src/Makefile
+++ b/trunk/0.9.224/src/Makefile
@@ -50,7 +50,8 @@ SRC_routines_flux = \
  hartfock.f90 genkinmat.f90 energykncr.f90 zfint.f90 rfpack.f90 rfint.f90 \
  writefsm.f90 genbmatk.f90 seceqnit.f90 gdft.f90 genexpiqr.f90 writeexpiqr.f90 \
  elnes.f90 symdmat.f90 genlmirep.f90 checknorm.f90 getnrfmax.f90 genwfsvmt.f90 \
- genwfsvit.f90 wfprodk.f90 geturf.f90 genurfprod.f90
+ genwfsvit.f90 wfprodk.f90 geturf.f90 genurfprod.f90 parallel.f90 getgshells.f90 \
+ response.f90 response_me.f90 response_chi0.f90 response_chi.f90 lapack.f90
 
 SRC_phonon = \
  phonon.f90 dyntask.f90 phcell.f90 phdisp.f90 readdyn.f90 dynqtor.f90 \
