--- a/trunk/0.9.224-new-wf/src/Makefile
+++ b/trunk/0.9.224-new-wf/src/Makefile
@@ -54,7 +54,7 @@ SRC_routines_flux = \
  response.f90 response_me.f90 response_chi0.f90 response_chi.f90 lapack.f90 \
  wann_init.f90 genwann.f90 genshmat.f90 wann_plot.f90 wann_init1.f90 timer.f90 \
  wann_ene_occ.f90 dosrlm.f90 bandchar.f90 gendmatrsh.f90 response_jdos.f90 \
- writenn.f90 sethml.f90 setovl.f90 checkwf.f90
+ writenn.f90 sethml.f90 setovl.f90 checkwf.f90 genwffvwann.f90 genwfpoco.f90
 
 SRC_phonon = \
  phonon.f90 dyntask.f90 phcell.f90 phdisp.f90 readdyn.f90 dynqtor.f90 \
