--- a/trunk/0.9.224-more-mpi/src/Makefile
+++ b/trunk/0.9.224-more-mpi/src/Makefile
@@ -52,7 +52,7 @@ SRC_routines_flux = \
  elnes.f90 symdmat.f90 genlmirep.f90 checknorm.f90 getnrfmax.f90 genwfsvmt.f90 \
  genwfsvit.f90 wfprodk.f90 geturf.f90 genurfprod.f90 parallel.f90 getgshells.f90 \
  lapack.f90 wann_init.f90 genwann.f90 genshmat.f90 wann_plot.f90 timer.f90 \
- wann_ene_occ.f90 dosrlm.f90 gendmatrsh.f90 hdf5.f90 \
+ wann_ene_occ.f90 dosrlm.f90 gendmatrsh.f90 \
  writenn.f90 sethml.f90 setovl.f90 checkwf.f90 genwffvwann.f90 genwfpoco.f90 \
  f_veff.f90 f_rho.f90 f_wann.f90 exciting_init.f90 
 
