--- a/trunk/0.9.224/utilities/Makefile
+++ b/trunk/0.9.224/utilities/Makefile
@@ -11,8 +11,19 @@ all: writeinput
 #OBJ_writeinput = $(SRC_writeinput:.f90=.o) 
 modmain.o:
 	$(F77) $(F77_OPTS) -c ../src/modmain.f90
-OBJ_writeinput = modmain.o
+readinput.o:
+	$(F77) $(F77_OPTS) -c ../src/readinput.f90
+readspecies.o:
+	$(F77) $(F77_OPTS) -c ../src/readspecies.f90
+r3minv.o:
+	$(F77) $(F77_OPTS) -c ../src/r3minv.f90
+r3mv.o:
+	$(F77) $(F77_OPTS) -c ../src/r3mv.f90
+	
+OBJ_writeinput = writeinput.o modmain.o readinput.o readspecies.o r3minv.o r3mv.o
 
 writeinput: $(OBJ_writeinput)
 	$(F77) -o $@ $(OBJ_writeinput)
 		
+clean:
+	rm *.o *.mod
