--- a/branches/exciting-plus-grid-fastLR/src/Makefile
+++ b/branches/exciting-plus-grid-fastLR/src/Makefile
@@ -14,7 +14,7 @@ include ../make.inc
 #-------------------------------------------------------------------------------
 # Source files
 #-------------------------------------------------------------------------------
-SRC_modules = mod_mpi_grid.f90 mod_timer.f90 modmain.f90 modxcifc.f90 mod_hdf5.f90 
+SRC_modules = mod_mpi_grid.f90 mod_timer.f90 mod_hdf5.f90 modmain.f90 modxcifc.f90 
 
 SRC_main = main.f90
 
