--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -99,7 +99,7 @@ SRC_xc = \
   xc_pzca.f90 xc_pwca.f90 xc_pbe.f90 xc_am05.f90 xc_xalpha.f90 xc_wc06.f90 \
   x_wc06.f90 x_pbe.f90 c_pbe.f90 c_pbe_gcor.f90 xc_vbh.f90
 
-SRC_addons := $(shell ls addons/*.f90 addons/linresp/*.f90 addons/wann/*.f90)
+SRC_addons := $(shell ls addons/*.f90 addons/linresp/*.f90 addons/wann/*.f90 addons/sic/*.f90)
 
 SRC = $(SRC_modules) $(SRC_main) $(SRC_routines) $(SRC_routines_flux) \
  $(SRC_lib) $(SRC_lib_flux) $(SRC_advanced) $(SRC_phonon) $(SRC_optics) \
