--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ include ../make.inc
 # Source files
 #-------------------------------------------------------------------------------
 SRC_modules = mod_mpi_grid.f90 mod_timer.f90 modtest.f90 mod_hdf5.f90 modmain.f90 \
- mod_nrkp.f90 mod_lf.f90 modxcifc.f90 
+ mod_nrkp.f90 modxcifc.f90 
 
 SRC_main = main.f90
 
@@ -100,7 +100,7 @@ SRC_xc = \
   xc_pzca.f90 xc_pwca.f90 xc_pbe.f90 xc_am05.f90 xc_xalpha.f90 xc_wc06.f90 \
   x_wc06.f90 x_pbe.f90 c_pbe.f90 c_pbe_gcor.f90 xc_vbh.f90
 
-SRC_addons := $(shell ls addons/*.f90 addons/linresp/*.f90 addons/wann/*.f90 addons/sic/*.f90)
+SRC_addons := $(shell ls addons/*.f90 addons/linresp/*.f90 addons/wann/*.f90)
 
 SRC = $(SRC_modules) $(SRC_main) $(SRC_routines) $(SRC_routines_flux) \
  $(SRC_lib) $(SRC_lib_flux) $(SRC_advanced) $(SRC_phonon) $(SRC_optics) \
