--- a/src/Makefile
+++ b/src/Makefile
@@ -30,7 +30,7 @@ SRC_libxc = libxcifc_stub.f90
 
 SRC_modules = mod_addons.f90 mod_addons_q.f90 mod_mpi_grid.f90 mod_timer.f90 \
   mod_papi.f90 modmain.f90 modqpt.f90 mod_nrkp.f90 mod_hdf5.f90 $(SRC_libxc) modxcifc.f90 \
-  modldapu.f90 modrdm.f90 modphonon.f90 modtest.f90 mod_lf.f90
+  modldapu.f90 modrdm.f90 modphonon.f90 modtest.f90 mod_sic.f90
 
 # main program
 SRC_main = main.f90
