--- a/src/Makefile
+++ b/src/Makefile
@@ -51,7 +51,7 @@ EXE = elk
 # Targets
 #-------------------------------------------------------------------------------
 elk:	$(OBJ_modules) $(OBJ)
-	$(F90) $(F90_OPTS) -o $(EXE) $(OBJ) $(LIB_LPK) $(LIB_XC) $(LIB_SYS)
+	$(F90) $(F90_OPTS) -o $(EXE) $(OBJ) $(LIB_LPK) $(LIB_XC) $(LIB_SYS) $(LIB_LAPACK)
 
 lib:
 	libtool -static -o libelk.a $(OBJ)
