--- a/trunk/utilities/pp_u/Makefile
+++ b/trunk/utilities/pp_u/Makefile
@@ -8,7 +8,7 @@ F90_OPTS_SERIAL=$(subst -D_MPI_,,$(F90_OPTS))
 all: pp_u4
 
 mod_hdf5.o:
-	$(F90) -c $(F90_OPTS_SERIAL) ../../src/mod_hdf5.f90 -o mod_hdf5.o
+	$(F90) -c $(F90_OPTS_SERIAL) ../../src/addons/mod_hdf5.f90 -o mod_hdf5.o
 
 pp_u4: mod_hdf5.o pp_u4.o 
 	$(F90) -o $@ mod_hdf5.o pp_u4.o $(LIB_SYS)
